# kindle-dash

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  config.toml.example
.claude/: CLAUDE.md
KUAL/kindle-dash/: config.xml  menu.json  run.sh
src/: config.rs  fetch.rs  logging.rs  main.rs  schedule.rs
src/device/: battery.rs  display.rs  mod.rs  power.rs  sys.rs
src/next-wakeup/: Cargo.toml
